--- a/vignettes/RAIDS.Rmd
+++ b/vignettes/RAIDS.Rmd
@@ -309,44 +309,44 @@ gds1KG <- snpgdsOpen(fileGDS)
 dataRef <- select1KGPop(gds1KG, nbProfiles=2L)
 closefn.gds(gds1KG)
 
-## Chromosome length information for hg38
-## chrInfo[23] is chrX, chrInfo[24] is chrY and chrM is chrInfo[25]
-chrInfo <- c(248956422L, 242193529L, 198295559L, 190214555L,
- 181538259L, 170805979L, 159345973L, 145138636L, 138394717L, 133797422L,
- 135086622L, 133275309L, 114364328L, 107043718L, 101991189L, 90338345L,
- 83257441L,  80373285L,  58617616L,  64444167L,  46709983L, 50818468L,
- 156040895L, 57227415L,  16569L)
+## GenomeInfoDb and BSgenome are required libraries to run this example
+if (requireNamespace("GenomeInfoDb", quietly=TRUE) &&
+      requireNamespace("BSgenome.Hsapiens.UCSC.hg38", quietly=TRUE)) {
 
-#############################################################################
-## The path where the Sample GDS files (one per sample)
-## will be created needs to be specified.
-#############################################################################
-pathProfileGDS <- file.path(tempdir(), "exampleDNA", "out.tmp")
+  ## Chromosome length information
+  ## chr23 is chrX, chr24 is chrY and chrM is 25
+  chrInfo <- GenomeInfoDb::seqlengths(BSgenome.Hsapiens.UCSC.hg38::Hsapiens)[1:25]
 
-#############################################################################
-## The path where the result files will be created needs to 
-## be specified
-#############################################################################
-pathOut <- file.path(tempdir(), "exampleDNA", "res.out")
+  #############################################################################
+  ## The path where the Sample GDS files (one per sample)
+  ## will be created needs to be specified.
+  #############################################################################
+  pathProfileGDS <- file.path(tempdir(), "exampleDNA", "out.tmp")
 
-## Example can only be run if the current directory is in writing mode
-if (!dir.exists(file.path(tempdir(), "exampleDNA"))) {
+  #############################################################################
+  ## The path where the result files will be created needs to 
+  ## be specified
+  #############################################################################
+  pathOut <- file.path(tempdir(), "exampleDNA", "res.out")
 
-    dir.create(file.path(tempdir(), "exampleDNA"))
-    dir.create(pathProfileGDS)
-    dir.create(pathOut)
+  ## Example can only be run if the current directory is in writing mode
+  if (!dir.exists(file.path(tempdir(), "exampleDNA"))) {
+
+      dir.create(file.path(tempdir(), "exampleDNA"))
+      dir.create(pathProfileGDS)
+      dir.create(pathOut)
     
-    #########################################################################
-    ## The wrapper function generates the synthetic dataset and uses it 
-    ## to selected the optimal parameters before calling the genetic 
-    ## ancestry on the current profiles.
-    ## All important information, for each step, are saved in 
-    ## multiple output files.
-    ## The 'genoSource' parameter has 2 options depending on how the 
-    ##   SNP pileup files have been generated: 
-    ##      "snp-pileup" (snp-pileup software) or "generic" (other software)
-    #########################################################################
-    runExomeAncestry(pedStudy=ped, studyDF=studyDF,
+      #########################################################################
+      ## The wrapper function generates the synthetic dataset and uses it 
+      ## to selected the optimal parameters before calling the genetic 
+      ## ancestry on the current profiles.
+      ## All important information, for each step, are saved in 
+      ## multiple output files.
+      ## The 'genoSource' parameter has 2 options depending on how the 
+      ##   SNP pileup files have been generated: 
+      ##      "snp-pileup" (snp-pileup software) or "generic" (other software)
+      #########################################################################
+      runExomeAncestry(pedStudy=ped, studyDF=studyDF,
                  pathProfileGDS=pathProfileGDS,
                  pathGeno=pathGeno,
                  pathOut=pathOut,
@@ -355,22 +355,23 @@ if (!dir.exists(file.path(tempdir(), "exampleDNA"))) {
                  chrInfo=chrInfo,
                  syntheticRefDF=dataRef,
                  genoSource="snp-pileup")
-    list.files(pathOut)
-    list.files(file.path(pathOut, ped$Name.ID[1]))
+      list.files(pathOut)
+      list.files(file.path(pathOut, ped$Name.ID[1]))
 
-    #########################################################################
-    ## The file containing the ancestry inference (SuperPop column) and 
-    ## optimal number of PCA component (D column)
-    ## optimal number of neighbours (K column)
-    #########################################################################
-    resAncestry <- read.csv(file.path(pathOut, 
+      #########################################################################
+      ## The file containing the ancestry inference (SuperPop column) and 
+      ## optimal number of PCA component (D column)
+      ## optimal number of neighbours (K column)
+      #########################################################################
+      resAncestry <- read.csv(file.path(pathOut, 
                                     paste0(ped$Name.ID[1], ".Ancestry.csv")))
-    print(resAncestry)
+      print(resAncestry)
 
-    ## Remove temporary files created for this demo
-    unlink(pathProfileGDS, recursive=TRUE, force=TRUE)
-    unlink(pathOut, recursive=TRUE, force=TRUE)
-    unlink(file.path(tempdir(), "exampleDNA"), recursive=TRUE, force=TRUE)
+      ## Remove temporary files created for this demo
+      unlink(pathProfileGDS, recursive=TRUE, force=TRUE)
+      unlink(pathOut, recursive=TRUE, force=TRUE)
+      unlink(file.path(tempdir(), "exampleDNA"), recursive=TRUE, force=TRUE)
+  }
 }
   
 
@@ -527,44 +528,44 @@ gds1KG <- snpgdsOpen(fileGDS)
 dataRef <- select1KGPop(gds1KG, nbProfiles=2L)
 closefn.gds(gds1KG)
 
-## Chromosome length information for hg38
-## chrInfo[23] is chrX, chrInfo[24] is chrY and chrM is chrInfo[25]
-chrInfo <- c(248956422L, 242193529L, 198295559L, 190214555L,
- 181538259L, 170805979L, 159345973L, 145138636L, 138394717L, 133797422L,
- 135086622L, 133275309L, 114364328L, 107043718L, 101991189L, 90338345L,
- 83257441L,  80373285L,  58617616L,  64444167L,  46709983L, 50818468L,
- 156040895L, 57227415L,  16569L)
+## GenomeInfoDb and BSgenome are required libraries to run this example
+if (requireNamespace("GenomeInfoDb", quietly=TRUE) &&
+      requireNamespace("BSgenome.Hsapiens.UCSC.hg38", quietly=TRUE)) {
 
-#############################################################################
-## The path where the Sample GDS files (one per sample)
-## will be created needs to be specified.
-#############################################################################
-pathProfileGDS <- file.path(tempdir(), "exampleRNA", "outRNA.tmp")
+  ## Chromosome length information
+  ## chr23 is chrX, chr24 is chrY and chrM is 25
+  chrInfo <- GenomeInfoDb::seqlengths(BSgenome.Hsapiens.UCSC.hg38::Hsapiens)[1:25]
 
-#############################################################################
-## The path where the result files will be created needs to 
-## be specified
-#############################################################################
-pathOut <- file.path(tempdir(), "exampleRNA", "resRNA.out")
+  #############################################################################
+  ## The path where the Sample GDS files (one per sample)
+  ## will be created needs to be specified.
+  #############################################################################
+  pathProfileGDS <- file.path(tempdir(), "exampleRNA", "outRNA.tmp")
 
-## Example can only be run if the current directory is in writing mode
-if (!dir.exists(file.path(tempdir(), "exampleRNA"))) {
+  #############################################################################
+  ## The path where the result files will be created needs to 
+  ## be specified
+  #############################################################################
+  pathOut <- file.path(tempdir(), "exampleRNA", "resRNA.out")
 
-    dir.create(file.path(tempdir(), "exampleRNA"))
-    dir.create(pathProfileGDS)
-    dir.create(pathOut)
+  ## Example can only be run if the current directory is in writing mode
+  if (!dir.exists(file.path(tempdir(), "exampleRNA"))) {
+
+      dir.create(file.path(tempdir(), "exampleRNA"))
+      dir.create(pathProfileGDS)
+      dir.create(pathOut)
     
-    #########################################################################
-    ## The wrapper function generates the synthetic dataset and uses it 
-    ## to selected the optimal parameters before calling the genetic 
-    ## ancestry on the current profiles.
-    ## All important information, for each step, are saved in 
-    ## multiple output files.
-    ## The 'genoSource' parameter has 2 options depending on how the 
-    ##   SNP pileup files have been generated: 
-    ##      "snp-pileup" (snp-pileup software) or "generic" (other software)
-    #########################################################################
-    runRNAAncestry(pedStudy=ped, studyDF=studyDF,
+      #########################################################################
+      ## The wrapper function generates the synthetic dataset and uses it 
+      ## to selected the optimal parameters before calling the genetic 
+      ## ancestry on the current profiles.
+      ## All important information, for each step, are saved in 
+      ## multiple output files.
+      ## The 'genoSource' parameter has 2 options depending on how the 
+      ##   SNP pileup files have been generated: 
+      ##      "snp-pileup" (snp-pileup software) or "generic" (other software)
+      #########################################################################
+      runRNAAncestry(pedStudy=ped, studyDF=studyDF,
                     pathProfileGDS=pathProfileGDS,
                     pathGeno=pathGeno,
                     pathOut=pathOut,
@@ -575,22 +576,23 @@ if (!dir.exists(file.path(tempdir(), "exampleRNA"))) {
                     blockTypeID="GeneS.Ensembl.Hsapiens.v86",
                     genoSource="snp-pileup")
     
-    list.files(pathOut)
-    list.files(file.path(pathOut, ped$Name.ID[1]))
+      list.files(pathOut)
+      list.files(file.path(pathOut, ped$Name.ID[1]))
 
-    #########################################################################
-    ## The file containing the ancestry inference (SuperPop column) and 
-    ## optimal number of PCA component (D column)
-    ## optimal number of neighbours (K column)
-    #########################################################################
-    resAncestry <- read.csv(file.path(pathOut, 
+      #########################################################################
+      ## The file containing the ancestry inference (SuperPop column) and 
+      ## optimal number of PCA component (D column)
+      ## optimal number of neighbours (K column)
+      #########################################################################
+      resAncestry <- read.csv(file.path(pathOut, 
                                     paste0(ped$Name.ID[1], ".Ancestry.csv")))
-    print(resAncestry)
+      print(resAncestry)
 
-    ## Remove temporary files created for this demo
-    unlink(pathProfileGDS, recursive=TRUE, force=TRUE)
-    unlink(pathOut, recursive=TRUE, force=TRUE)
-    unlink(file.path(tempdir(), "example"), recursive=TRUE, force=TRUE)
+      ## Remove temporary files created for this demo
+      unlink(pathProfileGDS, recursive=TRUE, force=TRUE)
+      unlink(pathOut, recursive=TRUE, force=TRUE)
+      unlink(file.path(tempdir(), "example"), recursive=TRUE, force=TRUE)
+  }
 }
  
 ```
